--- a/index.html
+++ b/index.html
@@ -10,27 +10,65 @@
 		
 		<table id="table1" border="5">
 			<tr>
-				<th colspan="3">Example #1</th>
+				<th colspan="5">Example #1</th>
 			</tr>
 			<tr data-type="title">
+				<th>Space</th>
+				<th data-id="type">Type</th>
 				<th data-id="name">Name</th>
 				<th data-id="lastname">Last Name</th>
 				<th data-id="phone">Phone</th>
 			</tr>
 			<tr data-type="data">
+				<td data-ignorefield="true"></td>
+				<td>2</td>
 				<td>Pepe</td>
 				<td>Diaz</td>
 				<td>123</td>
 			</tr>
 			<tr data-type="data">
+				<td data-ignorefield="true"></td>
+				<td>1</td>
 				<td>Carlos</td>
 				<td>Carvajal</td>
 				<td>456</td>
 			</tr>
 			<tr data-type="data">
+				<td data-ignorefield="true"></td>
+				<td>3</td>
 				<td>Felipe</td>
 				<td>Hidalgo</td>
 				<td>789</td>
+			</tr>
+			<tr data-type="data">
+				<td data-ignorefield="true"></td>
+				<td>1</td>
+				<td>Camilo</td>
+				<td>Gutierrez</td>
+				<td>101112</td>
+			</tr>
+			<tr data-type="data">
+				<td data-ignorefield="true"></td>
+				<td>2</td>
+				<td>Daniela</td>
+				<td>Gonzalez</td>
+				<td>131415</td>
+			</tr>
+			<tr data-type="input">
+				<td></td>
+				<td data-inputtype="select">
+					<select>
+						<option value="0">Select a type</option>
+						<option value="1">1</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5</option>
+					</select>
+				</td>
+				<td data-inputtype="text"><input type="text" placeholder="Name" /></td>
+				<td data-inputtype="text"><input type="text" placeholder="Last name" /></td>
+				<td data-inputtype="text"><input type="text" placeholder="Phone" /></td>
 			</tr>
 		</table>
 
@@ -51,6 +89,18 @@
 				<td>22</td>
 				<td>33</td>
 				<td>44</td>
+			</tr>
+			<tr data-type="data">
+				<td>55</td>
+				<td>66</td>
+				<td>77</td>
+				<td>88</td>
+			</tr>
+			<tr data-type="data">
+				<td>99</td>
+				<td>1010</td>
+				<td>1111</td>
+				<td>1212</td>
 			</tr>
 		</table>
 
