Implementing css class handling.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						</tr>
 						<tr>
 							<td data-input="select">
-								<select>
+								<select class="" data-class="">
 									<option value="0">Select a type</option>
 									<option value="1">1</option>
 									<option value="2">2</option>
@@ -83,11 +83,11 @@
 									<option value="5">5</option>
 								</select>
 							</td>
-							<td data-input="text"><input type="text" placeholder="Name" /></td>
+							<td data-input="text"><input type="text" placeholder="Name" class="" data-class="" /></td>
 						</tr>
 						<tr>
-							<td data-input="text"><input type="text" placeholder="Last name" /></td>
-							<td data-input="text"><input type="text" placeholder="Phone" /></td>
+							<td data-input="text"><input type="text" placeholder="Last name" class="" data-class="" /></td>
+							<td data-input="text"><input type="text" placeholder="Phone" class="" data-class="" /></td>
 						</tr>
 						<tr>
 							<td colspan="2">
@@ -167,10 +167,10 @@
 							</td>
 						</tr>
 						<tr>
-							<td data-input="text"><input type="text" placeholder="Data #1" /></td>
-							<td data-input="text"><input type="text" placeholder="Data #2" /></td>
-							<td data-input="text"><input type="text" placeholder="Data #3" /></td>
-							<td data-input="text"><input type="text" placeholder="Data #4" /></td>
+							<td data-input="text"><input type="text" placeholder="Data #1" class="" data-class="" /></td>
+							<td data-input="text"><input type="text" placeholder="Data #2" class="" data-class="" /></td>
+							<td data-input="text"><input type="text" placeholder="Data #3" class="" data-class="" /></td>
+							<td data-input="text"><input type="text" placeholder="Data #4" class="" data-class="" /></td>
 						</tr>
 					</table>
 				</td>
