Implementing ids management.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<th data-id="lastname">Last Name</th>
 				<th data-id="phone">Phone</th>
 			</tr>
-			<tr data-type="data">
+			<tr data-id="1" data-type="data">
 				<td data-ignorefield="true">
 					<button id="delete">
 						Delete
@@ -39,7 +39,7 @@
 				<td data-input="text"><input type="text" placeholder="Last name" value="Diaz" /></td>
 				<td data-input="text"><input type="text" placeholder="Phone" value="123" /></td>
 			</tr>
-			<tr data-type="data">
+			<tr data-id="2" data-type="data">
 				<td data-ignorefield="true">
 					<button id="delete">
 						Delete
@@ -120,7 +120,7 @@
 				<th data-id="data3">Data #3</th>
 				<th data-id="data4">Data #4</th>
 			</tr>
-			<tr data-type="data">
+			<tr data-id="1" data-type="data">
 				<td data-ignorefield="true">
 					<button id="delete">
 						Delete
@@ -131,7 +131,7 @@
 				<td data-input="text"><input type="text" placeholder="Data #3" value="33" /></td>
 				<td data-input="text"><input type="text" placeholder="Data #4" value="44" /></td>
 			</tr>
-			<tr data-type="data">
+			<tr data-id="2" data-type="data">
 				<td data-ignorefield="true">
 					<button id="delete">
 						Delete
@@ -142,7 +142,7 @@
 				<td data-input="text"><input type="text" placeholder="Data #3" value="77" /></td>
 				<td data-input="text"><input type="text" placeholder="Data #4" value="88" /></td>
 			</tr>
-			<tr data-type="data">
+			<tr data-id="3" data-type="data">
 				<td data-ignorefield="true">
 					<button id="delete">
 						Delete
