--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
 		<script src="dist/main.min.js"></script>
 	</head>
 	<body>
-		
+
+
+
+
 		<table id="table1" border="2" style="border: 2px solid;" cellspacing=1>
 			<tr>
-				<th colspan="5">Example #1</th>
+				<th colspan="7">
+					<button type="button" onclick="oSmartTableAg.add('#table1')">
+						Save
+					</button>
+					Example #1
+				</th>
 			</tr>
 			<tr data-type="title">
 				<th></th>
@@ -43,7 +51,7 @@
 				<td data-input="radio"><input type="radio" id="myradio" name="myradio" /></td>
 				<td data-input="checkbox"><input type="checkbox" /></td>
 			</tr>
-			<tr data-id="2" data-type="data">
+			<tr data-id="1" data-type="data">
 				<td data-ignorefield="true">
 					<button id="delete">
 						Delete
@@ -53,34 +61,29 @@
 					<select>
 						<option value="0">Select a type</option>
 						<option value="1">1</option>
-						<option value="2">2</option>
+						<option value="2" selected>2</option>
 						<option value="3">3</option>
 						<option value="4">4</option>
-						<option value="5" selected>5</option>
+						<option value="5">5</option>
 					</select>
 				</td>
-				<td data-input="text"><input type="text" placeholder="Name" value="Felipe" /></td>
+				<td data-input="text"><input type="text" placeholder="Name" value="Juan" /></td>
 				<td data-input="text"><input type="text" placeholder="Last name" value="Carvajal" /></td>
-				<td data-input="text"><input type="text" placeholder="Phone" value="582" /></td>
+				<td data-input="text"><input type="text" placeholder="Phone" value="456"  /></td>
 				<td data-input="radio"><input type="radio" id="myradio" name="myradio" checked/></td>
 				<td data-input="checkbox"><input type="checkbox" /></td>
 			</tr>
-			<tr id="tableinputs">
+			<tr id="tableinputs" style="display: none;">
 				<td colspan="5">
 					<table>
 						<tr>
-							<th colspan="2">Insert</th>
-						</tr>
-						<tr style="display: none;">
 							<td data-input="ignorefield">
 								<button id="delete">
 									Delete
 								</button>
 							</td>
-						</tr>
-						<tr>
 							<td data-input="select">
-								<select class="" data-class="">
+								<select class="">
 									<option value="0">Select a type</option>
 									<option value="1">1</option>
 									<option value="2">2</option>
@@ -89,25 +92,14 @@
 									<option value="5">5</option>
 								</select>
 							</td>
-							<td data-input="text"><input type="text" placeholder="Name" class="" data-class="" /></td>
-						</tr>
-						<tr>
-							<td data-input="text"><input type="text" placeholder="Last name" class="" data-class="" /></td>
-							<td data-input="text"><input type="text" placeholder="Phone" class="" data-class="" /></td>
-						</tr>
-						<tr style="display: none;">
+							<td data-input="text"><input type="text" placeholder="Name" class="" /></td>
+							<td data-input="text"><input type="text" placeholder="Last name" class="" /></td>
+							<td data-input="text"><input type="text" placeholder="Phone" class="" /></td>
 							<td data-input="radio">
 								<input type="radio" id="myradio" name="myradio" />
 							</td>
 							<td data-input="checkbox">
 								<input type="checkbox" />
-							</td>
-						</tr>
-						<tr>
-							<td colspan="2">
-								<button onclick="oSmartTableAg.add('#table1')">
-									Save
-								</button>
 							</td>
 						</tr>
 					</table>
@@ -125,7 +117,12 @@
 
 		<table id="table2" border="2" style="border: 2px solid;" cellspacing=1>
 			<tr>
-				<th colspan="5">Example #2</th>
+				<th colspan="5">
+					<button type="button" onclick="oSmartTableAg.add('#table2')">
+						Save
+					</button>
+					Example #2
+				</th>
 			</tr>
 			<tr data-type="title">
 				<th></th>
@@ -167,29 +164,28 @@
 				<td data-input="text"><input type="text" placeholder="Data #3" value="1111" /></td>
 				<td data-input="text"><input type="text" placeholder="Data #4" value="1212" /></td>
 			</tr>
-			<tr id="tableinputs">
+			<tr id="tableinputs" style="display: none;">
 				<td colspan="5">
 					<table>
 						<tr>
-							<th colspan="4">Insert</th>
-						</tr>
-						<tr style="display: none;">
 							<td data-input="ignorefield">
 								<button id="delete">
 									Delete
 								</button>
 							</td>
-						</tr>
-						<tr>
-							<td data-input="text"><input type="text" placeholder="Data #1" class="" data-class="" /></td>
-							<td data-input="text"><input type="text" placeholder="Data #2" class="" data-class="" /></td>
-							<td data-input="text"><input type="text" placeholder="Data #3" class="" data-class="" /></td>
-							<td data-input="text"><input type="text" placeholder="Data #4" class="" data-class="" /></td>
+							<td data-input="text"><input type="text" placeholder="Data #1" class="" /></td>
+							<td data-input="text"><input type="text" placeholder="Data #2" class="" /></td>
+							<td data-input="text"><input type="text" placeholder="Data #3" class="" /></td>
+							<td data-input="text"><input type="text" placeholder="Data #4" class=""/></td>
 						</tr>
 					</table>
 				</td>
 			</tr>
 		</table>
+
+
+
+		
 	</body>
 </html>
 
