--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="utf-8">
+
 		<title>Smart table</title>
 
 		<script src="node_modules/jquery/dist/jquery.min.js"></script>
@@ -45,13 +47,13 @@
 						<option value="5">5</option>
 					</select>
 				</td>
-				<td data-input="text"><input type="text" placeholder="Name" value="Pepe" /></td>
-				<td data-input="text"><input type="text" placeholder="Last name" value="Diaz" /></td>
-				<td data-input="text"><input type="text" placeholder="Phone" value="123" /></td>
+				<td data-input="text"><input type="text" placeholder="Name" value="Pepe" autocomplete="off" /></td>
+				<td data-input="text"><input type="text" placeholder="Last name" value="Diaz" autocomplete="off" /></td>
+				<td data-input="text"><input type="text" placeholder="Phone" value="123" autocomplete="off" /></td>
 				<td data-input="radio"><input type="radio" id="myradio" name="myradio" /></td>
 				<td data-input="checkbox"><input type="checkbox" /></td>
 			</tr>
-			<tr data-id="1" data-type="data">
+			<tr data-id="2" data-type="data">
 				<td data-ignorefield="true">
 					<button id="delete">
 						Delete
@@ -61,15 +63,15 @@
 					<select>
 						<option value="0">Select a type</option>
 						<option value="1">1</option>
-						<option value="2" selected>2</option>
+						<option value="2">2</option>
 						<option value="3">3</option>
-						<option value="4">4</option>
+						<option value="4" selected>4</option>
 						<option value="5">5</option>
 					</select>
 				</td>
-				<td data-input="text"><input type="text" placeholder="Name" value="Juan" /></td>
-				<td data-input="text"><input type="text" placeholder="Last name" value="Carvajal" /></td>
-				<td data-input="text"><input type="text" placeholder="Phone" value="456"  /></td>
+				<td data-input="text"><input type="text" placeholder="Name" value="Carlos" autocomplete="off" /></td>
+				<td data-input="text"><input type="text" placeholder="Last name" value="Hidalgo" autocomplete="off" /></td>
+				<td data-input="text"><input type="text" placeholder="Phone" value="456" autocomplete="off" /></td>
 				<td data-input="radio"><input type="radio" id="myradio" name="myradio" checked/></td>
 				<td data-input="checkbox"><input type="checkbox" /></td>
 			</tr>
@@ -92,9 +94,9 @@
 									<option value="5">5</option>
 								</select>
 							</td>
-							<td data-input="text"><input type="text" placeholder="Name" class="" /></td>
-							<td data-input="text"><input type="text" placeholder="Last name" class="" /></td>
-							<td data-input="text"><input type="text" placeholder="Phone" class="" /></td>
+							<td data-input="text"><input type="text" placeholder="Name" class="" autocomplete="off" /></td>
+							<td data-input="text"><input type="text" placeholder="Last name" class="" autocomplete="off" /></td>
+							<td data-input="text"><input type="text" placeholder="Phone" class="" autocomplete="off" /></td>
 							<td data-input="radio">
 								<input type="radio" id="myradio" name="myradio" />
 							</td>
@@ -137,10 +139,10 @@
 						Delete
 					</button>
 				</td>
-				<td data-input="text"><input type="text" placeholder="Data #1" value="11" /></td>
-				<td data-input="text"><input type="text" placeholder="Data #2" value="22" /></td>
-				<td data-input="text"><input type="text" placeholder="Data #3" value="33" /></td>
-				<td data-input="text"><input type="text" placeholder="Data #4" value="44" /></td>
+				<td data-input="text"><input type="text" placeholder="Data #1" value="11" autocomplete="off" /></td>
+				<td data-input="text"><input type="text" placeholder="Data #2" value="22" autocomplete="off" /></td>
+				<td data-input="text"><input type="text" placeholder="Data #3" value="33" autocomplete="off" /></td>
+				<td data-input="text"><input type="text" placeholder="Data #4" value="44" autocomplete="off" /></td>
 			</tr>
 			<tr data-id="2" data-type="data">
 				<td data-ignorefield="true">
@@ -148,10 +150,10 @@
 						Delete
 					</button>
 				</td>
-				<td data-input="text"><input type="text" placeholder="Data #1" value="55" /></td>
-				<td data-input="text"><input type="text" placeholder="Data #2" value="66" /></td>
-				<td data-input="text"><input type="text" placeholder="Data #3" value="77" /></td>
-				<td data-input="text"><input type="text" placeholder="Data #4" value="88" /></td>
+				<td data-input="text"><input type="text" placeholder="Data #1" value="55" autocomplete="off" /></td>
+				<td data-input="text"><input type="text" placeholder="Data #2" value="66" autocomplete="off" /></td>
+				<td data-input="text"><input type="text" placeholder="Data #3" value="77" autocomplete="off" /></td>
+				<td data-input="text"><input type="text" placeholder="Data #4" value="88" autocomplete="off" /></td>
 			</tr>
 			<tr data-id="3" data-type="data">
 				<td data-ignorefield="true">
@@ -159,10 +161,10 @@
 						Delete
 					</button>
 				</td>
-				<td data-input="text"><input type="text" placeholder="Data #1" value="99" /></td>
-				<td data-input="text"><input type="text" placeholder="Data #2" value="1010" /></td>
-				<td data-input="text"><input type="text" placeholder="Data #3" value="1111" /></td>
-				<td data-input="text"><input type="text" placeholder="Data #4" value="1212" /></td>
+				<td data-input="text"><input type="text" placeholder="Data #1" value="99" autocomplete="off" /></td>
+				<td data-input="text"><input type="text" placeholder="Data #2" value="1010" autocomplete="off" /></td>
+				<td data-input="text"><input type="text" placeholder="Data #3" value="1111" autocomplete="off" /></td>
+				<td data-input="text"><input type="text" placeholder="Data #4" value="1212" autocomplete="off" /></td>
 			</tr>
 			<tr id="tableinputs" style="display: none;">
 				<td colspan="5">
@@ -173,10 +175,10 @@
 									Delete
 								</button>
 							</td>
-							<td data-input="text"><input type="text" placeholder="Data #1" class="" /></td>
-							<td data-input="text"><input type="text" placeholder="Data #2" class="" /></td>
-							<td data-input="text"><input type="text" placeholder="Data #3" class="" /></td>
-							<td data-input="text"><input type="text" placeholder="Data #4" class=""/></td>
+							<td data-input="text"><input type="text" placeholder="Data #1" class="" autocomplete="off" /></td>
+							<td data-input="text"><input type="text" placeholder="Data #2" class="" autocomplete="off" /></td>
+							<td data-input="text"><input type="text" placeholder="Data #3" class="" autocomplete="off" /></td>
+							<td data-input="text"><input type="text" placeholder="Data #4" class="" autocomplete="off" /></td>
 						</tr>
 					</table>
 				</td>
