Improvements in the handling of text fields.

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 							<option value="5">5</option>
 						</select>
 					</td>
-					<td data-input="text"><input type="text" placeholder="Name" value="Pepe" autocomplete=off /></td>
-					<td data-input="text"><input type="text" placeholder="Last name" value="Carvajal" autocomplete=off /></td>
-					<td data-input="text"><input type="text" placeholder="Phone" value="123" autocomplete=off /></td>
+					<td data-input="text"><input type="text" placeholder="Name" value="Pepe" /></td>
+					<td data-input="text"><input type="text" placeholder="Last name" value="Carvajal" /></td>
+					<td data-input="text"><input type="text" placeholder="Phone" value="123" /></td>
 					<td data-input="radio">
 						<input type="radio" id="myradio" name="myradio" checked/>
 					</td>
@@ -108,9 +108,9 @@
 						<option value="5">5</option>
 					</select>
 				</td>
-				<td data-input="text"><input type="text" placeholder="Name" autocomplete=off /></td>
-				<td data-input="text"><input type="text" placeholder="Last name" autocomplete=off /></td>
-				<td data-input="text"><input type="text" placeholder="Phone" autocomplete=off /></td>
+				<td data-input="text"><input type="text" placeholder="Name" /></td>
+				<td data-input="text"><input type="text" placeholder="Last name" /></td>
+				<td data-input="text"><input type="text" placeholder="Phone" /></td>
 				<td data-input="radio">
 					<input type="radio" id="myradio" name="myradio" />
 				</td>
@@ -127,5 +127,6 @@
 <script>
 
 oSmartTableAg.setEventsFromTable('#table1');
+oSmartTableAg.setEventsFromTable('#table2');
 
 </script>
