Improving disposal management.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				</tr>
 				<tr data-type="data" data-id="1">
 					<td data-ignorefield="true">
-						<button type="button" id="delete">
+						<button type="button" class="smarttable-ag-delete">
 							Delete
 						</button>
 					</td>
@@ -89,7 +89,7 @@
 		<table id="tablefields" style="display: none;">
 			<tr data-type="data">
 				<td data-ignorefield="true">
-					<button type="button" id="delete">
+					<button type="button" class="smarttable-ag-delete">
 						Delete
 					</button>
 				</td>
