--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Smart table</title>
+		<title>Smart Table</title>
 
-		<script src="node_modules/jquery/dist/jquery.min.js"></script>
-		<script src="dist/main.min.js"></script>
+		<script src="src/js/dist/main.min.js"></script>
 	</head>
 	<body>
 
 
-		<form method="post">
+		<form method="post" onsubmit="return false;">
 			<table id="table1" border="2" style="border: 2px solid;" cellspacing=1>
 				<tr>
 					<th colspan="7">
