Continuing with important changes.

--- a/index.html
+++ b/index.html
@@ -37,14 +37,40 @@
 							<option value="0">Select a type</option>
 							<option value="1">1</option>
 							<option value="2">2</option>
-							<option value="3" selected>3</option>
+							<option value="3">3</option>
 							<option value="4">4</option>
-							<option value="5">5</option>
+							<option value="5" selected>5</option>
 						</select>
 					</td>
 					<td data-input="text"><input type="text" placeholder="Name" value="Pepe" /></td>
 					<td data-input="text"><input type="text" placeholder="Last name" value="Carvajal" /></td>
 					<td data-input="text"><input type="text" placeholder="Phone" value="123" /></td>
+					<td data-input="radio">
+						<input type="radio" />
+					</td>
+					<td data-input="checkbox">
+						<input type="checkbox" />
+					</td>
+				</tr>
+				<tr data-type="data" data-id="2">
+					<td data-ignorefield="true">
+						<button type="button" class="smarttable-ag-delete">
+							Delete
+						</button>
+					</td>
+					<td data-input="select">
+						<select class="">
+							<option value="0">Select a type</option>
+							<option value="1">1</option>
+							<option value="2">2</option>
+							<option value="3" selected>3</option>
+							<option value="4">4</option>
+							<option value="5">5</option>
+						</select>
+					</td>
+					<td data-input="text"><input type="text" placeholder="Name" value="Andrés" /></td>
+					<td data-input="text"><input type="text" placeholder="Last name" value="Gómez" /></td>
+					<td data-input="text"><input type="text" placeholder="Phone" value="456" /></td>
 					<td data-input="radio">
 						<input type="radio" checked/>
 					</td>
