--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					</td>
 				</tr>
 			</table>
-
+			
 			<br />
 			<button type="button" onclick="oSmartTableAg.add('#table1', '#tablefields')">
 				Add
@@ -144,6 +144,9 @@
 
 		oSmartTableAg.setEventsFromTable('#table1');
 		oSmartTableAg.setEventsFromTable('#table2');
+
+		// oSmartTableAg.getArrayFromTable('#table1');
+		// oSmartTableAg.getArrayFromTable('#table2');
 
 		</script>
 	</body>
