--- a/test.html
+++ b/test.html
@@ -65,6 +65,8 @@
 		<script>
 		
 		oSmartTableAg.setEventsFromTable('#table1');
+		
+		// oSmartTableAg.getArrayFromTable('#table1');
 
 		</script>
 	</body>
