--- a/test.html
+++ b/test.html
@@ -64,7 +64,9 @@
 
 		<script>
 		
-		oSmartTableAg.setEventsFromTable('#table1');
+		oSmartTableAg.loadTableEvents({
+			smarttable: ['#table1']
+		});
 		
 		// oSmartTableAg.getArrayFromTable('#table1');
 
