--- a/index.html
+++ b/index.html
@@ -141,9 +141,10 @@
 		</table>
 
 		<script>
-
-		oSmartTableAg.setEventsFromTable('#table1');
-		oSmartTableAg.setEventsFromTable('#table2');
+		
+		oSmartTableAg.loadTableEvents({
+			smarttable: ['#table1', '#table2']
+		});
 
 		// oSmartTableAg.getArrayFromTable('#table1');
 		// oSmartTableAg.getArrayFromTable('#table2');
